--- a/manifest.json
+++ b/manifest.json
@@ -2,16 +2,23 @@
 {
   "short_name": "HydroNFC",
   "name": "HydroNFC - 智能飲水提醒",
+  "description": "NFC 智能飲水紀錄與提醒工具",
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/3100/3100566.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
+    },
+    {
+      "src": "https://cdn-icons-png.flaticon.com/512/3100/3100566.png",
+      "sizes": "192x192",
+      "type": "image/png"
     }
   ],
-  "start_url": ".",
+  "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#3b82f6",
-  "background_color": "#f8fafc"
+  "background_color": "#f8fafc",
+  "orientation": "portrait"
 }
